# omm-sbt-lim

./: LICENSE  README.md  observable_alias_memory_necessity.py  preliminary_memory_necessity_anticheat.py  pyproject.toml  requirements.txt
docs/: REPRODUCIBILITY_PLAN.md
experiments/: latent_memory_calibration_scan.py  strict_double_blind_memory_necessity.py
results/summaries/latent_memory_calibration_scan/: interpretation.json  summary_condition_mode.csv  summary_mode.csv
results/summaries/observable_alias_memory_necessity/: summary_by_alias_leak.csv  summary_by_condition.csv  summary_by_destroy_severity.csv  summary_by_memory_cap.csv  summary_by_mode.csv
results/summaries/strict_double_blind_memory_necessity/: interpretation.json  summary_by_condition_mode.csv  summary_by_mode.csv
scripts/: inspect_available_results.py
src/lim/: __init__.py  metrics.py
tests/: test_metrics.py
