[project]
name = "omm-sbt-lim"
version = "0.1.0"
description = "Reproducibility scaffold for OMM--SBT--LIM latent identity reconstruction experiments"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "scipy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
